--- a/views/admin/viewUsers.ejs
+++ b/views/admin/viewUsers.ejs
@@ -26,15 +26,13 @@
             <% if (user.access) {%>
             <a
               href="/admin/block-user/<%= user._id %>"
-              class="btn btn-outline-danger"
-              onclick="return confirm('Do you want to Block <%=user.firstname %> <%=user.lastname %> ?')"
+              class="btn btn-outline-danger blockUser"
               >Block</a
             >
             <%} else {%>
             <a
               href="/admin/unblock-user/<%= user._id %>"
-              class="btn btn-outline-success"
-              onclick="return confirm('Do you want to Unblock <%=user.firstname %> <%=user.lastname %> ?')"
+              class="btn btn-outline-success unblockUser"
               >Unblock</a
             >
             <% } %>
@@ -45,3 +43,49 @@
     </table>
   </div>
 </section>
+
+<!-- onclick="return confirm('Do you want to Block user.firstname user.lastname  ?')" -->
+
+<script>
+  // block user
+  $(".blockUser").on("click", function (e) {
+    e.preventDefault();
+    var self = $(this);
+    console.log(self.data("title"));
+    Swal.fire({
+      title: "Are you sure?",
+      text: "You are going to BLOCK this user!",
+      icon: "warning",
+      showCancelButton: true,
+      confirmButtonColor: "#3085d6",
+      cancelButtonColor: "#d33",
+      confirmButtonText: "Yes, block!",
+    }).then((result) => {
+      if (result.isConfirmed) {
+        Swal.fire("Blocked!", ` User has been blocked`, "success");
+        location.href = self.attr("href");
+      }
+    });
+  });
+
+  // unblock user
+  $(".unblockUser").on("click", function (e) {
+    e.preventDefault();
+    var self = $(this);
+    console.log(self.data("title"));
+    Swal.fire({
+      title: "Are you sure?",
+      text: `You are going to UNBLOCK this user!`,
+      icon: "warning",
+      showCancelButton: true,
+      confirmButtonColor: "#3085d6",
+      cancelButtonColor: "#d33",
+      confirmButtonText: "Yes, unblock!",
+    }).then((result) => {
+      if (result.isConfirmed) {
+        Swal.fire("Unblocked!", ` User has been blocked`, "success");
+        location.href = self.attr("href");
+      }
+    });
+  });
+</script>
