--- a/views/partials/userHeader.ejs
+++ b/views/partials/userHeader.ejs
@@ -33,7 +33,7 @@
           <% if(locals.user){ %>
           <li class="nav-item">
             <a class="nav-link" href="/cart"
-              >Cart
+              ><i class="fa-solid fa-cart-shopping"></i> Cart
               <span class="badge bg-secondary zindex-offcanvas" id="cart-count"
                 ><%= cartCount %>
               </span></a
@@ -41,7 +41,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/wishlist"
-              >Wishlist<span
+              ><i class="fa-solid fa-heart"></i> Wishlist<span
                 class="badge bg-secondary zindex-offcanvas"
                 id="wishlist-count"
                 ><%= wishlistCount %></span
