cart and wishlist 24

--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -17,22 +17,24 @@
           </thead>
           <% var No=1 %>
           <tbody style="text-align: center">
-            <% locals.cartItems.forEach(item=>{%>
+            <% locals.products.forEach(cartItem=>{%>
             <tr>
               <th scope="row"><%=No++ %></th>
-              <td>
-                <img
-                  style="width: 40px; height: 50px"
-                  src="/users/productImages/<%=item._id %>.jpg "
-                  alt=""
-                />
-              </td>
-              <td><%=item.Name %></td>
-              <td><button class="card-item-count btn btn-outline-dark m-1"><i class="fa-solid fa-minus"></i><button class="btn btn-outline-dark m-1"><%=item.Quantity %><button class="card-item-count btn btn-outline-dark m-1"><i class="fa-solid fa-plus"></i>
+              <% cartItem.product.forEach(item=>{ %> 
+                <td>
+                  <img
+                    style="width: 40px; height: 50px"
+                    src="/users/productImages/<%=item._id %>.jpg "
+                    alt=""
+                  />
+                </td>
+                <td><%=item.Name %></td>
+                <% }) %> 
+              <td><button class="card-item-count btn btn-outline-dark m-1"><i class="fa-solid fa-minus"></i><button class="btn btn-outline-dark m-1"><%=cartItem.quantity %><button class="card-item-count btn btn-outline-dark m-1"><i class="fa-solid fa-plus"></i>
               </button></td>
               <td>
                 <a
-                  href="/remove-product/<%=item._id %>"
+                  href="/remove-product/<%=cartItem._id %>"
                   class="btn btn-outline-danger removeProduct"
                   ><i class="fa-solid fa-trash"></i></a>
               </td>
