--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -1,5 +1,6 @@
 <section class="page-fill" style="background-color: #eaddbf">
-  <div style="padding-top: 5%; padding-bottom: 5%;">
+  <div style="padding-top: 5%; ">
+    <!-- padding-bottom: 5%; -->
     <div class="container shadow-lg rounded pb-2 pt-2">
         <table
           class="table table-fluid table-hover table-bordered mt-5 pt-2"
@@ -49,6 +50,15 @@
         </table>
       </div>
   </div>
+  <hr class="me-5 ms-5 mt-3">
+ <div class="container">
+  <div class="row d-flex r flex-row-reverse">
+    <div class="col-2 card text-center pt-1 shadow-sm" style="background-color: #e0d0ae">
+      <h4>Total : 10000 ₹</h4>
+      <a href="/placeOrder" class="btn btn-outline-success mb-2">Place Order</a>
+   </div>
+  </div>
+ </div>
 </section>
 
 <!-- onclick="return confirm('Do you want to delete product.Name ?')" -->
