cart dynamic total + single product

--- a/views/partials/userHeader.ejs
+++ b/views/partials/userHeader.ejs
@@ -35,7 +35,7 @@
             <a class="nav-link" href="/cart"
               ><i class="fa-solid fa-cart-shopping"></i> Cart
               <span class="badge bg-secondary zindex-offcanvas" id="cart-count"
-                ><%= cartCount %>
+                ><%= locals.cartCount %>
               </span></a
             >
           </li>
@@ -44,7 +44,7 @@
               ><i class="fa-solid fa-heart"></i> Wishlist<span
                 class="badge bg-secondary zindex-offcanvas"
                 id="wishlist-count"
-                ><%= wishlistCount %></span
+                ><%= locals.wishlistCount %></span
               ></a
             >
           </li>
